/*
 * $Id: ChangeLog,v 1.2537 2004/03/10 03:12:17 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-03-10 16:35 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * contrib/winprn/testprn.prg
    - trap error condition if no printers installed

2004-03-10 10:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/dbdelim.prg
    ! forget to pass cSeparator to FPARSEEX()

2004-03-10 10:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/fparse.c
    + FPARSEEX( cFile ) -> two dimension array of parsed text
    + FPARSELINE()      -> single dimension array of parsed text
      These are enhanced parsing utility for delimited text file which
      contains values delimited with '"' ie. "Homer, Junior" which when
      parsed with FPARSE(), breaks into: (1) "Homer (2) Junior"

  + tests/fparsex.prg
    ! test program for FPARSEEX() and FPARSELINE()

  + tests/test1.csv
    ! comma delimited text file for the purpose of testing the above functions

  * source/rtl/dbdelim.prg
    ! more enhancement using FPARSEEX()

  + test/tstdelim.prg
    ! previously : 0.80 seconds
      now        : 0.22 seconds

2004-03-09 18:39 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
    + Added HB_FUNC( OLERELEASEOBJECT )
    + Added Destructor Release() which releases the OLE Interface by calling OleReleaseObject()
      once the PRG object is being destroyed.

2004-03-10 10:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * contrib/winprn/testprn.prg
    - removed unused variable

2004-03-09 13:53 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * include/inkey.ch
    ! added #define K_CTRL_SH_TAB 423
  * source/rtl/gtwin/gtwin.c
    ! added support of K_CTRL_SH_TAB
    ! added lookup of inkey.ch K_CTRL_codes instead of fixed 1-26
